--- a/myStyle.css
+++ b/myStyle.css
@@ -9,38 +9,42 @@ body{
     height: 100%;
     /*grid*/
 	display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 5% 15% auto 15%;
+    grid-template-columns: 10% 1fr 1fr 1fr 10%;/*width*/
+    grid-template-rows: 1% 9% 15% auto 15%;/*heigh*/
     grid-template-areas : 
-        "header header header"
-        "toper toper toper" 
-        "canvas canvas canvas"
-        "footer footer footer";
-    grid-gap: 10px 10px;
+        ". . . . ."
+        ". header1 header2 header3 ."
+        ". title title title ." 
+        ". canvas canvas canvas ."
+        ". tool1 tool2 tool3 .";
 }
-header{
-    grid-area: header;
-    margin: 10px 10px 0px 10px;
+#prev{
+    grid-area: header1;
 }
-#toper{
-    grid-area: toper;
+#username{
+    grid-area: header2;
+    text-decoration: underline;
+}
+#setting{
+    grid-area: header3;
+}
+#title{
+    grid-area: title;
     background-color: #ccffcc;
-    border-radius: 12px;
-    margin: 0px 10px 0px 10px;
 }
 #myCanvas{
     width: 100%;
     height: 100%;
     grid-area: canvas;
-    border-radius: 12px;
-    border-radius: 12px;
 }
-footer{
-    grid-area: footer;
-    height: 100%;
-    background-color: #99ccff;
-    border-radius: 12px;
-    margin: 0px 10px 0px 10px;
+#reset{
+    grid-area: tool1;
+}
+#colorPicker{
+    grid-area: tool2;
+}
+#submit{
+    grid-area: tool3;
 }
 
 /*COLORPICKER*************************************************************************************************/
